Fix ErrorProne warnings
* http://errorprone.info/bugpattern/AssertEqualsArgumentOrderChecker
* http://errorprone.info/bugpattern/AssertionFailureIgnored
* http://errorprone.info/bugpattern/BoxedPrimitiveConstructor
* http://errorprone.info/bugpattern/CanonicalDuration
* http://errorprone.info/bugpattern/CatchFail
* http://errorprone.info/bugpattern/ClassCanBeStatic
* http://errorprone.info/bugpattern/ClassNewInstance
* http://errorprone.info/bugpattern/DefaultCharset
* http://errorprone.info/bugpattern/DoubleBraceInitialization
* http://errorprone.info/bugpattern/EqualsHashCode
* http://errorprone.info/bugpattern/EqualsIncompatibleType
* http://errorprone.info/bugpattern/FutureReturnValueIgnored
* http://errorprone.info/bugpattern/ImmutableEnumChecker
* http://errorprone.info/bugpattern/IntLongMath
* http://errorprone.info/bugpattern/JavaLangClash
* http://errorprone.info/bugpattern/JdkObsolete
* http://errorprone.info/bugpattern/MissingOverride
* http://errorprone.info/bugpattern/MutableConstantField
* http://errorprone.info/bugpattern/NarrowingCompoundAssignment
* http://errorprone.info/bugpattern/OperatorPrecedence
* http://errorprone.info/bugpattern/ReferenceEquality
* http://errorprone.info/bugpattern/ShortCircuitBoolean
* http://errorprone.info/bugpattern/StringSplitter
* http://errorprone.info/bugpattern/TypeParameterUnusedInFormals
* http://errorprone.info/bugpattern/UnsynchronizedOverridesSynchronized